--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="/todo-icon.svg" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="./public/todo-list.svg"
+      type="image/x-icon"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todo-List-Tsx</title>
+    <title>Todo-List-TS</title>
   </head>
   <body>
     <div id="root"></div>
